# MusicalDesk

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 00_user_table.sql  01_member_table.sql  02_membership_paid.sql  03_products_and_instances.sql  04_ticket_owner.sql  05_stripe_references.sql  06_drop_invalidated.sql  07_expense_management.sql  08_extra_user_info.sql  09_cascade.sql  10_ticket.sql
src/: main.rs  serialize.rs  session.rs
src/controller/: auth.rs  default.rs  event.rs  image.rs  member.rs  membership.rs  mod.rs  ticket.rs  user.rs
src/controller/event/: dashboard.rs  event.rs  mod.rs  ticket.rs
src/controller/expense/: account.rs  budget.rs  category.rs  dashboard.rs  expense.rs  mod.rs  report.rs  transaction.rs
src/controller/membership/: dashboard.rs  member.rs  membership.rs  mod.rs
src/controller/shop/: customer.rs  mod.rs  payment.rs  public_info.rs  shopping_cart.rs  stripe.rs  ticket.rs
src/dto/: budget.rs  dashboard.rs  expense.rs  mod.rs  report.rs  ticket.rs  transaction.rs
src/models/: checkout_session.rs  event.rs  generic.rs  image.rs  member.rs  membership_paid.rs  mod.rs  ticket.rs  user.rs
src/models/event/: checkout_session.rs  event.rs  mod.rs  ticket.rs
src/models/expense/: account.rs  budget.rs  category.rs  expense.rs  mod.rs  report.rs  transaction.rs
src/models/membership/: member.rs  mod.rs  (+1 more)
src/service/: checkout_session.rs  mod.rs  stripe.rs
src/util/: aztec.rs  jwt.rs  mod.rs  pkpass.rs  qrcode.rs  rand.rs  role.rs  time.rs
webapp/: bun.lockb  package.json
webapp/translations/: de.json  en.json
(+225 files in other folders)
