[package]
name = "musical-desk"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-async-std",
    "postgres",
    "chrono",
] }
pretty_env_logger = "0.5.0"
log = { version = "0.4.22", features = ["serde", "std"] }
jwt = "0.16.0"
actix-cors = "0.7.0"
bcrypt = "0.17"
thiserror = "1.0.56"
hmac = "0.12.1"
sha2 = "0.10.8"
futures = "0.3.31"
chrono = { version = "0.4.40", features = ["serde"] }
actix-multipart = "0.7.2"
actix-files = "0.6.6"
